--- a/demo1/demo1.html
+++ b/demo1/demo1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>detailsタグsummaryタグで作るアコーディオンUI</title>
+  <title>STEP1 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="../base.css">
 </head>
 
@@ -13,13 +13,14 @@
   <summary>Summary</summary>
   <div>
     <p>コンテンツの詳細部分が入ります。</p>
-    <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
+    <p>コンテンツの詳細部分が入ります。</p>
+    <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
   </div>
 </details>
 
 <details>
-  <summary>Q.ダミーですか</summary>
-  <p>A.ダミーですよ</p>
+  <summary>Q. ダミーですか</summary>
+  <p>A. ダミーですよ</p>
 </details>
 
 <details>
@@ -28,20 +29,20 @@
     <ul>
       <li><a href="../demo1/demo1.html">STEP1 HTMLでマークアップする</a></li>
       <li><a href="../demo2/demo2.html">STEP2 CSSで装飾する</a></li>
-      <li><a href="../demo3-1/demo3-1.html">STEP3-1 JSでアニメーションを制御する[標準機能バージョン]</a></li>
-      <li><a href="../demo3-2/demo3-2.html">STEP3-2 JSでアニメーションを制御する[GSAPバージョン]</a></li>
+      <li><a href="../demo3-1/demo3-1.html">STEP3-1 JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
+      <li><a href="../demo3-2/demo3-2.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </div>
 </details>
 
 <footer>
-  <nav>
+  <nav class="navigation">
     <ul>
-      <li class="current-page"><span>STEP1</span>HTMLでマークアップする</li>
+      <li class="navigation_currentPage"><span>STEP1</span>HTMLでマークアップする</li>
       <li><span>STEP2</span><a href="../demo2/demo2.html">CSSで装飾する</a></li>
-      <li><span>STEP3-1</span><a href="../demo3-1/demo3-1.html">JSでアニメーションを制御する[標準機能バージョン]</a></li>
-      <li><span>STEP3-2</span><a href="../demo3-2/demo3-2.html">JSでアニメーションを制御する[GSAPバージョン]</a></li>
+      <li><span>STEP3-1</span><a href="../demo3-1/demo3-1.html">JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
+      <li><span>STEP3-2</span><a href="../demo3-2/demo3-2.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </nav>
