--- a/demo3-2/demo3-2.html
+++ b/demo3-2/demo3-2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JS制御 | detailsタグsummaryタグで作るアコーディオンUI</title>
+  <title>STEP3-2 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="../base.css">
   <link rel="stylesheet" href="demo3-2.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
@@ -13,43 +13,44 @@
 <body>
 <details class="js-details">
   <summary class="js-summary">Summary<span class="icon"></span></summary>
-  <div class="accordion-content js-content">
-    <div>
-      <p class="helper-mb16">コンテンツの詳細部分が入ります。</p>
-      <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
+  <div class="content js-content">
+    <div class="content_inner">
+      <p class="content_text content_text__mb16">コンテンツの詳細部分が入ります。</p>
+      <p class="content_text content_text__mb16">コンテンツの詳細部分が入ります。</p>
+      <p class="content_text">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
     </div>
   </div>
 </details>
 
 <details class="js-details">
-  <summary class="js-summary">Q.ダミーですか<span class="icon"></span></summary>
-  <div class="accordion-content js-content">
-    <div>
-      <p>A.ダミーですよ</p>
+  <summary class="js-summary">Q. ダミーですか<span class="icon"></span></summary>
+  <div class="content js-content">
+    <div class="content_inner">
+      <p class="content_text">A. ダミーですよ</p>
     </div>
   </div>
 </details>
 
 <details class="js-details">
   <summary class="js-summary">目次<span class="icon"></span></summary>
-  <div class="accordion-content js-content">
-    <ul>
+  <div class="content js-content">
+    <ul class="content_inner">
       <li><a href="../demo1/demo1.html">STEP1 HTMLでマークアップする</a></li>
       <li><a href="../demo2/demo2.html">STEP2 CSSで装飾する</a></li>
-      <li><a href="../demo3-1/demo3-1.html">STEP3-1 JSでアニメーションを制御する[標準機能バージョン]</a></li>
-      <li><a href="../demo3-2/demo3-2.html">STEP3-2 JSでアニメーションを制御する[GSAPバージョン]</a></li>
+      <li><a href="../demo3-1/demo3-1.html">STEP3-1 JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
+      <li><a href="../demo3-2/demo3-2.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </div>
 </details>
 
 <footer>
-  <nav>
+  <nav class="navigation">
     <ul>
       <li><span>STEP1</span><a href="../demo1/demo1.html">HTMLでマークアップする</a></li>
       <li><span>STEP2</span><a href="../demo2/demo2.html">CSSで装飾する</a></li>
-      <li><span>STEP3-1</span><a href="../demo3-1/demo3-1.html">JSでアニメーションを制御する[標準機能バージョン]</a></li>
-      <li class="current-page"><span>STEP3-2</span>JSでアニメーションを制御する[GSAPバージョン]</li>
+      <li><span>STEP3-1</span><a href="../demo3-1/demo3-1.html">JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
+      <li class="navigation_currentPage"><span>STEP3-2</span>JavaScriptでアニメーションを制御する[GSAPバージョン]</li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </nav>
