--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>detailsタグsummaryタグで作るアコーディオンUI</title>
+  <title>detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
 <h1>目次</h1>
-<nav class="top-page">
+<nav class="navigation navigation__topPage">
   <ul>
     <li><span>STEP1</span><a href="demo1/demo1.html">HTMLでマークアップする</a></li>
     <li><span>STEP2</span><a href="demo2/demo2.html">CSSで装飾する</a></li>
-    <li><span>STEP3-1</span><a href="demo3-1/demo3-1.html">JSでアニメーションを制御する[標準機能バージョン]</a></li>
-    <li><span>STEP3-2</span><a href="demo3-2/demo3-2.html">JSでアニメーションを制御する[GSAPバージョン]</a></li>
+    <li><span>STEP3-1</span><a href="demo3-1/demo3-1.html">JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
+    <li><span>STEP3-2</span><a href="demo3-2/demo3-2.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
   </ul>
 </nav>
 </body>
