文言・html・cssの修正

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-<h1>目次</h1>
+<h1>Q. 目次が見たいのですが。</h1>
 <nav class="navigation navigation__topPage">
   <ul>
-    <li><span>STEP1</span><a href="demo1/demo1.html">HTMLでマークアップする</a></li>
-    <li><span>STEP2</span><a href="demo2/demo2.html">CSSで装飾する</a></li>
-    <li><span>STEP3-1</span><a href="demo3-1/demo3-1.html">JavaScriptでアニメーションを制御する[標準機能バージョン]</a></li>
-    <li><span>STEP3-2</span><a href="demo3-2/demo3-2.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+    <li><span>STEP1</span><a href="demo1/index.html">HTMLでマークアップする</a></li>
+    <li><span>STEP2</span><a href="demo2/index.html">CSSで装飾する</a></li>
+    <li><span>STEP3-1</span><a href="demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+    <li><span>STEP3-2</span><a href="demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
   </ul>
 </nav>
 </body>
