--- a/demo3-2/index.html
+++ b/demo3-2/index.html
@@ -11,61 +11,65 @@
 </head>
 
 <body>
-<details class="js-details">
-  <summary class="js-summary">Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
-  <div class="content js-content">
-    <div class="content_inner">
-      <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+<div class="wrapper">
+  <details class="js-details">
+    <summary class="js-summary">Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
+    <div class="content js-content">
+      <div class="content_inner">
+        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+      </div>
     </div>
-  </div>
-</details>
+  </details>
 
-<details class="js-details">
-  <summary class="js-summary">Q. inputタグでも作れますよね？<span class="icon"></span></summary>
-  <div class="content js-content">
-    <div class="content_inner">
-      <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+  <details class="js-details">
+    <summary class="js-summary">Q. inputタグでも作れますよね？<span class="icon"></span></summary>
+    <div class="content js-content">
+      <div class="content_inner">
+        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+      </div>
     </div>
-  </div>
-</details>
+  </details>
 
-<details class="js-details">
-  <summary class="js-summary">Q. アニメーション作成するの大変そうですが…<span class="icon"></span></summary>
-  <div class="content js-content">
-    <div class="content_inner">
-      <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
-      <p>詳しくはSTEP3をご覧ください。</p>
+  <details class="js-details">
+    <summary class="js-summary">Q. アニメーション作成するの大変そうですが…<span class="icon"></span></summary>
+    <div class="content js-content">
+      <div class="content_inner">
+        <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>詳しくはSTEP3をご覧ください。</p>
+      </div>
     </div>
-  </div>
-</details>
+  </details>
 
-<details class="js-details">
-  <summary class="js-summary">Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span></summary>
-  <div class="content js-content">
-    <div class="content_inner">
-      <p>A. 以下のポイントを見直してみましょう。</p>
-      <ul>
-        <li>アコーディオンの中身(<code>summary</code>タグのすぐ下)を<code>div</code>タグなどで囲った部分には上下<code>padding</code>を持たせないこと。</li>
-        <li>
-          アコーディオンを閉じるとき（<code>details</code>タグの<code>open</code>属性が取り除かれるとき）は一瞬で非表示になるので、アニメーション完了を待ってから<code>open</code>属性を手動で取り除くこと。
-        </li>
+  <details class="js-details">
+    <summary class="js-summary">Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
+    </summary>
+    <div class="content js-content">
+      <div class="content_inner">
+        <p>A. 以下のポイントを見直してみましょう。</p>
+        <ul>
+          <li>アコーディオンの中身(<code>summary</code>タグのすぐ下)を<code>div</code>タグなどで囲った部分には上下<code>padding</code>を持たせないこと。</li>
+          <li>デフォルトの挙動を無効化（<code>preventDefault()</code>）して、手動で<code>open</code>属性を管理できているか。</li>
+          <li>
+            アコーディオンを閉じるとき（<code>details</code>タグの<code>open</code>属性が取り除かれるとき）は一瞬で非表示になるので、アニメーション完了を待ってから<code>open</code>属性を手動で取り除くこと。
+          </li>
+        </ul>
+      </div>
+    </div>
+  </details>
+
+  <details class="js-details">
+    <summary class="js-summary">Q. 目次が見たいのですが。<span class="icon"></span></summary>
+    <div class="content js-content">
+      <ul class="content_inner">
+        <li><a href="../demo1/index.html">STEP1 HTMLでマークアップする</a></li>
+        <li><a href="../demo2/index.html">STEP2 CSSで装飾する</a></li>
+        <li><a href="../demo3-1/index.html">STEP3-1 JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+        <li><a href="../demo3-2/index.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+        <li><a href="../index.html">目次一覧へ戻る</a></li>
       </ul>
     </div>
-  </div>
-</details>
-
-<details class="js-details">
-  <summary class="js-summary">Q. 目次が見たいのですが。<span class="icon"></span></summary>
-  <div class="content js-content">
-    <ul class="content_inner">
-      <li><a href="../demo1/index.html">STEP1 HTMLでマークアップする</a></li>
-      <li><a href="../demo2/index.html">STEP2 CSSで装飾する</a></li>
-      <li><a href="../demo3-1/index.html">STEP3-1 JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-      <li><a href="../demo3-2/index.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
-      <li><a href="../index.html">目次一覧へ戻る</a></li>
-    </ul>
-  </div>
-</details>
+  </details>
+</div>
 
 <footer>
   <nav class="navigation">
