文言修正等

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -14,23 +14,30 @@
   <div class="wrapper_normalIcon">
     <h1 class="wrapper_title">アイコン設置用のタグでアイコンを作る場合</h1>
     <details>
+      <summary>概要<span class="icon"></span></summary>
+      <div class="content">
+        折りたたまれている部分です。
+      </div>
+    </details>
+
+    <details>
       <summary>Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
       <div class="content">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
       <summary>Q. inputタグでも作れますよね？<span class="icon"></span></summary>
       <div class="content">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
       <summary>Q. アニメーション作成するの大変そうですが…<span class="icon"></span></summary>
       <div class="content">
-        <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがオススメです。</p>
         <p>詳しくはSTEP3をご覧ください。</p>
       </div>
     </details>
@@ -64,24 +71,23 @@
   <div class="wrapper_pseudoElementsIcon">
     <h1 class="wrapper_title">summaryタグの疑似要素でアイコンを作る場合</h1>
     <details>
+      <summary>概要</summary>
+      <div class="content">
+        折りたたまれている部分です。
+      </div>
+    </details>
+
+    <details>
       <summary>Q. buttonタグでもアコーディオンは作れそうですが？</summary>
       <div class="content">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
       <summary>Q. inputタグでも作れますよね？</summary>
       <div class="content">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
-      </div>
-    </details>
-
-    <details>
-      <summary>Q. アニメーション作成するの大変そうですが…</summary>
-      <div class="content">
-        <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
-        <p>詳しくはSTEP3をご覧ください。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
