--- a/demo3-1/index.html
+++ b/demo3-1/index.html
@@ -12,10 +12,19 @@
 <body>
 <div class="wrapper">
   <details class="js-details">
+    <summary class="js-summary">概要<span class="icon"></span></summary>
+    <div class="content js-content">
+      <div class="content_inner">
+        <p>折りたたまれている部分です。</p>
+      </div>
+    </div>
+  </details>
+
+  <details class="js-details">
     <summary class="js-summary">Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
     <div class="content js-content">
       <div class="content_inner">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </div>
   </details>
@@ -24,17 +33,7 @@
     <summary class="js-summary">Q. inputタグでも作れますよね？<span class="icon"></span></summary>
     <div class="content js-content">
       <div class="content_inner">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
-      </div>
-    </div>
-  </details>
-
-  <details class="js-details">
-    <summary class="js-summary">Q. アニメーション作成するの大変そうですが…<span class="icon"></span></summary>
-    <div class="content js-content">
-      <div class="content_inner">
-        <p>A. 確かにちょっとコツが入りますが、<code>details</code>タグと<code>summary</code>タグがおすすめです。</p>
-        <p>詳しくはSTEP3をご覧ください。</p>
+        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </div>
   </details>
