htmlを一部単純化

--- a/demo3-1/index.html
+++ b/demo3-1/index.html
@@ -15,7 +15,7 @@
     <summary class="js-summary">概要<span class="icon"></span></summary>
     <div class="content js-content">
       <div class="content_inner">
-        <p>折りたたまれている部分です。</p>
+        折りたたまれている部分です。
       </div>
     </div>
   </details>
