半角スペースとコロン追加

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>STEP1 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
+  <title>STEP 1 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="../base.css">
 </head>
 
@@ -40,10 +40,10 @@
   <details>
     <summary>Q. 目次が見たいのですが。</summary>
     <ul>
-      <li><a href="../demo1/index.html">STEP1 HTMLでマークアップする</a></li>
-      <li><a href="../demo2/index.html">STEP2 CSSで装飾する</a></li>
-      <li><a href="../demo3-1/index.html">STEP3-1 JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-      <li><a href="../demo3-2/index.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+      <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
+      <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+      <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+      <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </details>
@@ -52,10 +52,10 @@
 <footer>
   <nav class="navigation">
     <ul>
-      <li class="navigation_currentPage"><span>STEP1</span>HTMLでマークアップする</li>
-      <li><span>STEP2</span><a href="../demo2/index.html">CSSで装飾する</a></li>
-      <li><span>STEP3-1</span><a href="../demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-      <li><span>STEP3-2</span><a href="../demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+      <li class="navigation_currentPage"><span>STEP 1:</span>HTMLでマークアップする</li>
+      <li><span>STEP 2:</span><a href="../demo2/index.html">CSSで装飾する</a></li>
+      <li><span>STEP 3-1:</span><a href="../demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+      <li><span>STEP 3-2:</span><a href="../demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </nav>
