--- a/demo3-2/index.html
+++ b/demo3-2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>STEP3-2 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
+  <title>STEP 3-2 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="../base.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
@@ -60,10 +60,10 @@
     <summary class="js-summary">Q. 目次が見たいのですが。<span class="icon"></span></summary>
     <div class="content js-content">
       <ul class="content_inner">
-        <li><a href="../demo1/index.html">STEP1 HTMLでマークアップする</a></li>
-        <li><a href="../demo2/index.html">STEP2 CSSで装飾する</a></li>
-        <li><a href="../demo3-1/index.html">STEP3-1 JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-        <li><a href="../demo3-2/index.html">STEP3-2 JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+        <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
+        <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+        <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+        <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
         <li><a href="../index.html">目次一覧へ戻る</a></li>
       </ul>
     </div>
@@ -73,10 +73,10 @@
 <footer>
   <nav class="navigation">
     <ul>
-      <li><span>STEP1</span><a href="../demo1/index.html">HTMLでマークアップする</a></li>
-      <li><span>STEP2</span><a href="../demo2/index.html">CSSで装飾する</a></li>
-      <li><span>STEP3-1</span><a href="../demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-      <li class="navigation_currentPage"><span>STEP3-2</span>JavaScriptでアニメーションを制御する[GSAPバージョン]</li>
+      <li><span>STEP 1:</span><a href="../demo1/index.html">HTMLでマークアップする</a></li>
+      <li><span>STEP 2:</span><a href="../demo2/index.html">CSSで装飾する</a></li>
+      <li><span>STEP 3-1:</span><a href="../demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+      <li class="navigation_currentPage"><span>STEP 3-2:</span>JavaScriptでアニメーションを制御する[GSAPバージョン]</li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
     </ul>
   </nav>
