--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <h1>目次</h1>
 <nav class="navigation navigation__topPage">
   <ul>
-    <li><span>STEP1</span><a href="demo1/index.html">HTMLでマークアップする</a></li>
-    <li><span>STEP2</span><a href="demo2/index.html">CSSで装飾する</a></li>
-    <li><span>STEP3-1</span><a href="demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-    <li><span>STEP3-2</span><a href="demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+    <li><span>STEP 1:</span><a href="demo1/index.html">HTMLでマークアップする</a></li>
+    <li><span>STEP 2:</span><a href="demo2/index.html">CSSで装飾する</a></li>
+    <li><span>STEP 3-1:</span><a href="demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+    <li><span>STEP 3-2:</span><a href="demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
   </ul>
 </nav>
 </body>
