iOS14 flexboxバグのケア

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -14,28 +14,44 @@
   <div class="wrapper_normalIcon">
     <h1 class="wrapper_title">アイコン設置用のタグでアイコンを作る場合</h1>
     <details>
-      <summary>概要<span class="icon"></span></summary>
+      <summary>
+        <span class="summary_inner">
+          概要<span class="icon"></span>
+        </span>
+      </summary>
       <div class="content">
         折りたたまれている部分です。
       </div>
     </details>
 
     <details>
-      <summary>Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
+      <summary>
+        <span class="summary_inner">
+          Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span>
+        </span>
+      </summary>
       <div class="content">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
-      <summary>Q. inputタグでも作れますよね？<span class="icon"></span></summary>
+      <summary>
+        <span class="summary_inner">
+          Q. inputタグでも作れますよね？<span class="icon"></span>
+        </span>
+      </summary>
       <div class="content">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
-      <summary>Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span></summary>
+      <summary>
+        <span class="summary_inner">
+          Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
+        </span>
+      </summary>
       <div class="content">
         <p>A. 以下のポイントを見直してみましょう。</p>
         <ul>
@@ -49,7 +65,11 @@
     </details>
 
     <details>
-      <summary>Q. 目次が見たいのですが。<span class="icon"></span></summary>
+      <summary>
+        <span class="summary_inner">
+          Q. 目次が見たいのですが。<span class="icon"></span>
+        </span>
+      </summary>
       <ul class="content">
         <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
         <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
@@ -63,28 +83,44 @@
   <div class="wrapper_pseudoElementsIcon">
     <h1 class="wrapper_title">summaryタグの疑似要素でアイコンを作る場合</h1>
     <details>
-      <summary>概要</summary>
+      <summary>
+        <span class="summary_inner">
+          概要
+        </span>
+      </summary>
       <div class="content">
         折りたたまれている部分です。
       </div>
     </details>
 
     <details>
-      <summary>Q. buttonタグでもアコーディオンは作れそうですが？</summary>
+      <summary>
+        <span class="summary_inner">
+          Q. buttonタグでもアコーディオンは作れそうですが？
+        </span>
+      </summary>
       <div class="content">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
-      <summary>Q. inputタグでも作れますよね？</summary>
+      <summary>
+        <span class="summary_inner">
+          Q. inputタグでも作れますよね？
+        </span>
+      </summary>
       <div class="content">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
       </div>
     </details>
 
     <details>
-      <summary>Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。</summary>
+      <summary>
+        <span class="summary_inner">
+        Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。
+        </span>
+      </summary>
       <div class="content">
         <p>A. 以下のポイントを見直してみましょう。</p>
         <ul>
@@ -98,7 +134,11 @@
     </details>
 
     <details>
-      <summary>Q. 目次が見たいのですが。</summary>
+      <summary>
+        <span class="summary_inner">
+          Q. 目次が見たいのですが。
+        </span>
+      </summary>
         <ul class="content">
           <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
           <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
