--- a/demo3-2/index.html
+++ b/demo3-2/index.html
@@ -13,7 +13,11 @@
 <body>
 <div class="wrapper">
   <details class="js-details">
-    <summary class="js-summary">概要<span class="icon"></span></summary>
+    <summary class="js-summary">
+      <span class="summary_inner">
+        概要<span class="icon"></span>
+      </span>
+    </summary>
     <div class="content js-content">
       <div class="content_inner">
         折りたたまれている部分です。
@@ -22,7 +26,11 @@
   </details>
 
   <details class="js-details">
-    <summary class="js-summary">Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span></summary>
+    <summary class="js-summary">
+      <span class="summary_inner">
+        Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span>
+      </span>
+    </summary>
     <div class="content js-content">
       <div class="content_inner">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
@@ -31,7 +39,11 @@
   </details>
 
   <details class="js-details">
-    <summary class="js-summary">Q. inputタグでも作れますよね？<span class="icon"></span></summary>
+    <summary class="js-summary">
+      <span class="summary_inner">
+        Q. inputタグでも作れますよね？<span class="icon"></span>
+      </span>
+    </summary>
     <div class="content js-content">
       <div class="content_inner">
         <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
@@ -40,7 +52,10 @@
   </details>
 
   <details class="js-details">
-    <summary class="js-summary">Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
+    <summary class="js-summary">
+      <span class="summary_inner">
+        Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
+      </span>
     </summary>
     <div class="content js-content">
       <div class="content_inner">
@@ -57,7 +72,11 @@
   </details>
 
   <details class="js-details">
-    <summary class="js-summary">Q. 目次が見たいのですが。<span class="icon"></span></summary>
+    <summary class="js-summary">
+      <span class="summary_inner">
+        Q. 目次が見たいのですが。<span class="icon"></span>
+      </span>
+    </summary>
     <div class="content js-content">
       <ul class="content_inner">
         <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
