--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ul>
     <li><span>STEP 1:</span><a href="demo1/index.html">HTMLでマークアップする</a></li>
     <li><span>STEP 2:</span><a href="demo2/index.html">CSSで装飾する</a></li>
+    <li><span>STEP 3-0:</span><a href="demo3-0/index.html">CSSだけでアニメーションをつける</a></li>
     <li><span>STEP 3-1:</span><a href="demo3-1/index.html">JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
     <li><span>STEP 3-2:</span><a href="demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
   </ul>
