--- a/demo3-1/index.html
+++ b/demo3-1/index.html
@@ -11,81 +11,83 @@
 
 <body>
 <div class="wrapper">
-  <details class="js-details">
-    <summary class="js-summary">
-      <span class="summary_inner">
-        概要<span class="icon"></span>
-      </span>
-    </summary>
-    <div class="content js-content">
-      <div class="content_inner">
-        折りたたまれている部分です。
+  <div class="accordion-wrapper">
+    <details class="js-details">
+      <summary class="js-summary">
+        <span class="summary_inner">
+          概要<span class="icon"></span>
+        </span>
+      </summary>
+      <div class="content js-content">
+        <div class="content_inner">
+          折りたたまれている部分です。
+        </div>
       </div>
-    </div>
-  </details>
+    </details>
 
-  <details class="js-details">
-    <summary class="js-summary">
-      <span class="summary_inner">
-        Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span>
-      </span>
-    </summary>
-    <div class="content js-content">
-      <div class="content_inner">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
+    <details class="js-details">
+      <summary class="js-summary">
+        <span class="summary_inner">
+          Q. buttonタグでもアコーディオンは作れそうですが？<span class="icon"></span>
+        </span>
+      </summary>
+      <div class="content js-content">
+        <div class="content_inner">
+          <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
+        </div>
       </div>
-    </div>
-  </details>
+    </details>
 
-  <details class="js-details">
-    <summary class="js-summary">
-      <span class="summary_inner">
-        Q. inputタグでも作れますよね？<span class="icon"></span>
-      </span>
-    </summary>
-    <div class="content js-content">
-      <div class="content_inner">
-        <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
+    <details class="js-details">
+      <summary class="js-summary">
+        <span class="summary_inner">
+          Q. inputタグでも作れますよね？<span class="icon"></span>
+        </span>
+      </summary>
+      <div class="content js-content">
+        <div class="content_inner">
+          <p>A. <code>details</code>タグと<code>summary</code>タグがオススメです。</p>
+        </div>
       </div>
-    </div>
-  </details>
+    </details>
 
-  <details class="js-details">
-    <summary class="js-summary">
-      <span class="summary_inner">
-        Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
-      </span>
-    </summary>
-    <div class="content js-content">
-      <div class="content_inner">
-        <p>A. 以下のポイントを見直してみましょう。</p>
-        <ul>
-          <li>アコーディオンの中身(<code>summary</code>タグのすぐ下)を<code>div</code>タグなどで囲った部分には上下<code>padding</code>を持たせないこと。</li>
-          <li>デフォルトの挙動を無効化（<code>preventDefault()</code>）して、手動で<code>open</code>属性を管理できているか。</li>
-          <li>
-            アコーディオンを閉じるとき（<code>details</code>タグの<code>open</code>属性が取り除かれるとき）は一瞬で非表示になるので、アニメーション完了を待ってから<code>open</code>属性を手動で取り除くこと。
-          </li>
+    <details class="js-details">
+      <summary class="js-summary">
+        <span class="summary_inner">
+          Q. アコーディオンのアニメーションがなんか変です！期待通りに動作しなくて困っています…。どうすればよいでしょうか。<span class="icon"></span>
+        </span>
+      </summary>
+      <div class="content js-content">
+        <div class="content_inner">
+          <p>A. 以下のポイントを見直してみましょう。</p>
+          <ul>
+            <li>アコーディオンの中身(<code>summary</code>タグのすぐ下)を<code>div</code>タグなどで囲った部分には上下<code>padding</code>を持たせないこと。</li>
+            <li>デフォルトの挙動を無効化（<code>preventDefault()</code>）して、手動で<code>open</code>属性を管理できているか。</li>
+            <li>
+              アコーディオンを閉じるとき（<code>details</code>タグの<code>open</code>属性が取り除かれるとき）は一瞬で非表示になるので、アニメーション完了を待ってから<code>open</code>属性を手動で取り除くこと。
+            </li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
+    <details class="js-details">
+      <summary class="js-summary">
+        <span class="summary_inner">
+          Q. 目次が見たいのですが。<span class="icon"></span>
+        </span>
+      </summary>
+      <div class="content js-content">
+        <ul class="content_inner">
+          <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
+          <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+          <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
+          <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
+          <li><a href="../index.html">目次一覧へ戻る</a></li>
         </ul>
       </div>
-    </div>
-  </details>
-
-  <details class="js-details">
-    <summary class="js-summary">
-      <span class="summary_inner">
-        Q. 目次が見たいのですが。<span class="icon"></span>
-      </span>
-    </summary>
-    <div class="content js-content">
-      <ul class="content_inner">
-        <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
-        <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
-        <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
-        <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
-        <li><a href="../index.html">目次一覧へ戻る</a></li>
-      </ul>
-    </div>
-  </details>
+    </details>
+  </div>
 </div>
 
 <footer>
@@ -93,6 +95,7 @@
     <ul>
       <li><span>STEP 1:</span><a href="../demo1/index.html">HTMLでマークアップする</a></li>
       <li><span>STEP 2:</span><a href="../demo2/index.html">CSSで装飾する</a></li>
+      <li><span>STEP 3-0:</span><a href="../demo3-0/index.html">CSSだけでアニメーションをつける</a></li>
       <li class="navigation_currentPage"><span>STEP 3-1:</span>JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</li>
       <li><span>STEP 3-2:</span><a href="../demo3-2/index.html">JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
       <li><a href="../index.html">目次一覧へ戻る</a></li>
