-webkit-details-markerの指定を復活

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -70,8 +70,8 @@
     </details>
   </div>
 
-  <div class="default accordion-wrapper">
-    <h2>summaryタグの<code>::marker</code>をアレンジする例</h2>
+  <div class="pseudoElement accordion-wrapper">
+    <h2>summaryタグの擬似要素で実装する例</h2>
     <details>
       <summary>
         概要
