リンクの修正

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -44,6 +44,7 @@
       <ul>
         <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
         <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+        <li><a href="../demo3-0/index.html">STEP 3-0: CSSだけでアニメーションをつける</a></li>
         <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
         <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
         <li><a href="../index.html">目次一覧へ戻る</a></li>
@@ -85,6 +86,7 @@
       <ul>
         <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
         <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+        <li><a href="../demo3-0/index.html">STEP 3-0: CSSだけでアニメーションをつける</a></li>
         <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
         <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
         <li><a href="../index.html">目次一覧へ戻る</a></li>
