--- a/demo3-0/index.html
+++ b/demo3-0/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>STEP 4aaa | detailsタグsummaryタグで作るアコーディオンUI</title>
+  <title>STEP 3-0 | detailsタグsummaryタグで作るアコーディオンUI</title>
   <link rel="stylesheet" href="../base.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -62,6 +62,7 @@
       <ul class="content">
         <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
         <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+        <li><a href="../demo3-0/index.html">STEP 3-0: CSSだけでアニメーションをつける</a></li>
         <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
         <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
         <li><a href="../index.html">目次一覧へ戻る</a></li>
