--- a/demo3-1/index.html
+++ b/demo3-1/index.html
@@ -81,6 +81,7 @@
         <ul class="content_inner">
           <li><a href="../demo1/index.html">STEP 1: HTMLでマークアップする</a></li>
           <li><a href="../demo2/index.html">STEP 2: CSSで装飾する</a></li>
+          <li><a href="../demo3-0/index.html">STEP 3-0: CSSだけでアニメーションをつける</a></li>
           <li><a href="../demo3-1/index.html">STEP 3-1: JavaScriptでアニメーションを制御する[ブラウザ標準機能バージョン]</a></li>
           <li><a href="../demo3-2/index.html">STEP 3-2: JavaScriptでアニメーションを制御する[GSAPバージョン]</a></li>
           <li><a href="../index.html">目次一覧へ戻る</a></li>
