--- a/demo1/index.html
+++ b/demo1/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>STEP 1 | detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
-  <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="../base.css" />
 </head>
 
 <body>
