--- a/demo3-1/index.html
+++ b/demo3-1/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>STEP 3-1 | detailsタグsummaryタグで作るアコーディオンUI</title>
-  <link rel="stylesheet" href="../base.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
