--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>detailsタグsummaryタグで作るアコーディオンUIサンプル</title>
   <link rel="stylesheet" href="base.css">
 </head>
